--- a/DeviceMonitorCS/Views/SettingsView.xaml
+++ b/DeviceMonitorCS/Views/SettingsView.xaml
@@ -13,13 +13,19 @@
 
         <!-- Header -->
         <Border Grid.Row="0" Background="#252526" Padding="20">
-            <StackPanel>
-                <TextBlock Text="Application Settings" FontSize="24" FontWeight="Light" Foreground="White"/>
-                <StackPanel Orientation="Horizontal" Margin="0,5,0,0">
-                    <TextBlock x:Name="AppVersionText" Text="v0.0.0" Foreground="Cyan" FontSize="14" FontWeight="Bold" Margin="0,0,10,0"/>
-                    <TextBlock Text="Beta Program Edition" Foreground="#808080" FontSize="11" FontStyle="Italic" VerticalAlignment="Center"/>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Grid.Column="0" Text="Application Settings" FontSize="24" FontWeight="Light" Foreground="White" VerticalAlignment="Center"/>
+                
+                <StackPanel Grid.Column="1" Orientation="Vertical" HorizontalAlignment="Right" VerticalAlignment="Center">
+                    <TextBlock x:Name="AppVersionText" Text="v0.0.0" Foreground="Cyan" FontSize="14" FontWeight="Bold" HorizontalAlignment="Right"/>
+                    <TextBlock Text="Beta Program Edition" Foreground="#808080" FontSize="11" FontStyle="Italic" HorizontalAlignment="Right"/>
                 </StackPanel>
-            </StackPanel>
+            </Grid>
         </Border>
 
         <!-- Content -->
